--- a/LlamaParse_pdf_RAG/llamaParse_demo.ipynb
+++ b/LlamaParse_pdf_RAG/llamaParse_demo.ipynb
@@ -582,242 +582,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vxez3YCFpt6j"
-      },
-      "source": [
-        "## Note this next code block will not be in the final notebook!\n",
-        "The updates which are here will be merged with LlamaIndex very soon.\n",
-        "\n",
-        "For now, just run the below code block"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "fg4zGxonM3kg"
-      },
-      "outputs": [],
-      "source": [
-        "\"\"\"KDB.AI vector store index.\n",
-        "\n",
-        "An index that is built within KDB.AI.\n",
-        "\n",
-        "\"\"\"\n",
-        "\n",
-        "import logging\n",
-        "from typing import Any, List, Callable, Optional\n",
-        "\n",
-        "import pandas as pd\n",
-        "\n",
-        "from llama_index.core.bridge.pydantic import PrivateAttr\n",
-        "from llama_index.core.schema import BaseNode, TextNode\n",
-        "from llama_index.core.vector_stores.types import (\n",
-        "    BasePydanticVectorStore,\n",
-        "    VectorStoreQuery,\n",
-        "    VectorStoreQueryResult,\n",
-        ")\n",
-        "from llama_index.vector_stores.kdbai.utils import default_sparse_encoder\n",
-        "\n",
-        "DEFAULT_COLUMN_NAMES = [\"document_id\", \"text\", \"embedding\"]\n",
-        "\n",
-        "DEFAULT_BATCH_SIZE = 100\n",
-        "\n",
-        "\n",
-        "# INITIALISE LOGGER AND SET FORMAT\n",
-        "logger = logging.getLogger(__name__)\n",
-        "\n",
-        "\n",
-        "# MATCH THE METADATA COLUMN DATA TYPE TO ITS PYTYPE\n",
-        "def convert_metadata_col(column, value):\n",
-        "    try:\n",
-        "        if column[\"pytype\"] == \"str\":\n",
-        "            return str(value)\n",
-        "        elif column[\"pytype\"] == \"bytes\":\n",
-        "            return value.encode(\"utf-8\")\n",
-        "        elif column[\"pytype\"] == \"datetime64[ns]\":\n",
-        "            return pd.to_datetime(value)\n",
-        "        elif column[\"pytype\"] == \"timedelta64[ns]\":\n",
-        "            return pd.to_timedelta(value)\n",
-        "        return value.astype(column[\"pytype\"])\n",
-        "    except Exception as e:\n",
-        "        logger.error(\n",
-        "            f\"Failed to convert column {column['name']} to type {column['pytype']}: {e}\"\n",
-        "        )\n",
-        "\n",
-        "\n",
-        "class KDBAIVectorStore(BasePydanticVectorStore):\n",
-        "    \"\"\"The KDBAI Vector Store.\n",
-        "\n",
-        "    In this vector store we store the text, its embedding and\n",
-        "    its metadata in a KDBAI vector store table. This implementation\n",
-        "    allows the use of an already existing table.\n",
-        "\n",
-        "    Args:\n",
-        "        table kdbai.Table: The KDB.AI table to use as storage.\n",
-        "        batch (int, optional): batch size to insert data.\n",
-        "            Default is 100.\n",
-        "\n",
-        "    Returns:\n",
-        "        KDBAIVectorStore: Vectorstore that supports add and query.\n",
-        "    \"\"\"\n",
-        "\n",
-        "    stores_text: bool = True\n",
-        "    flat_metadata: bool = True\n",
-        "\n",
-        "    hybrid_search: bool = False\n",
-        "    batch_size: int\n",
-        "\n",
-        "    _table: Any = PrivateAttr()\n",
-        "    _sparse_encoder: Optional[Callable] = PrivateAttr()\n",
-        "\n",
-        "    def __init__(\n",
-        "        self,\n",
-        "        table: Any = None,\n",
-        "        hybrid_search: bool = False,\n",
-        "        sparse_encoder: Optional[Callable] = None,\n",
-        "        batch_size: int = DEFAULT_BATCH_SIZE,\n",
-        "        **kwargs: Any,\n",
-        "    ) -> None:\n",
-        "        \"\"\"Initialize params.\"\"\"\n",
-        "        try:\n",
-        "            import kdbai_client as kdbai\n",
-        "\n",
-        "            logger.info(\"KDBAI client version: \" + kdbai.__version__)\n",
-        "\n",
-        "        except ImportError:\n",
-        "            raise ValueError(\n",
-        "                \"Could not import kdbai_client package.\"\n",
-        "                \"Please add it to the dependencies.\"\n",
-        "            )\n",
-        "\n",
-        "        if table is None:\n",
-        "            raise ValueError(\"Must provide an existing KDB.AI table.\")\n",
-        "        else:\n",
-        "            self._table = table\n",
-        "\n",
-        "        if hybrid_search:\n",
-        "            if sparse_encoder is None:\n",
-        "                self._sparse_encoder = default_sparse_encoder\n",
-        "            else:\n",
-        "                self._sparse_encoder = sparse_encoder\n",
-        "\n",
-        "        super().__init__(batch_size=batch_size, hybrid_search=hybrid_search)\n",
-        "\n",
-        "    @property\n",
-        "    def client(self) -> Any:\n",
-        "        \"\"\"Return KDB.AI client.\"\"\"\n",
-        "        return self._table\n",
-        "\n",
-        "    @classmethod\n",
-        "    def class_name(cls) -> str:\n",
-        "        return \"KDBAIVectorStore\"\n",
-        "\n",
-        "    def add(\n",
-        "        self,\n",
-        "        nodes: List[BaseNode],\n",
-        "        **add_kwargs: Any,\n",
-        "    ) -> List[str]:\n",
-        "        \"\"\"Add nodes to the KDBAI Vector Store.\n",
-        "\n",
-        "        Args:\n",
-        "            nodes (List[BaseNode]): List of nodes to be added.\n",
-        "\n",
-        "        Returns:\n",
-        "            List[str]: List of document IDs that were added.\n",
-        "        \"\"\"\n",
-        "        df = pd.DataFrame()\n",
-        "        docs = []\n",
-        "        schema = self._table.schema()[\"columns\"]\n",
-        "        if self.hybrid_search:\n",
-        "            schema = [item for item in schema if item[\"name\"] != \"sparseVectors\"]\n",
-        "\n",
-        "        try:\n",
-        "            for node in nodes:\n",
-        "                doc = {\n",
-        "                    \"document_id\": node.node_id,\n",
-        "                    \"text\": node.text.encode(\"utf-8\"),\n",
-        "                    \"embedding\": node.embedding,\n",
-        "                }\n",
-        "\n",
-        "                if self.hybrid_search:\n",
-        "                    doc[\"sparseVectors\"] = self._sparse_encoder([node.get_content()])\n",
-        "\n",
-        "                # handle extra columns\n",
-        "                if len(schema) > len(DEFAULT_COLUMN_NAMES):\n",
-        "                    for column in schema[len(DEFAULT_COLUMN_NAMES) :]:\n",
-        "                        try:\n",
-        "                            doc[column[\"name\"]] = convert_metadata_col(\n",
-        "                                column, node.metadata[column[\"name\"]]\n",
-        "                            )\n",
-        "                        except Exception as e:\n",
-        "                            logger.error(\n",
-        "                                f\"Error writing column {column['name']} as type {column['pytype']}: {e}.\"\n",
-        "                            )\n",
-        "\n",
-        "                docs.append(doc)\n",
-        "\n",
-        "            df = pd.DataFrame(docs)\n",
-        "            for i in range((len(df) - 1) // self.batch_size + 1):\n",
-        "                batch = df.iloc[i * self.batch_size : (i + 1) * self.batch_size]\n",
-        "                try:\n",
-        "                    self._table.insert(batch, warn=False)\n",
-        "                    logger.info(f\"inserted batch {i}\")\n",
-        "                except Exception as e:\n",
-        "                    logger.exception(\n",
-        "                        f\"Failed to insert batch {i} of documents into the datastore: {e}\"\n",
-        "                    )\n",
-        "\n",
-        "            return df[\"document_id\"].tolist()\n",
-        "\n",
-        "        except Exception as e:\n",
-        "            logger.error(f\"Error preparing data for KDB.AI: {e}.\")\n",
-        "\n",
-        "    def query(self, query: VectorStoreQuery, **kwargs: Any) -> VectorStoreQueryResult:\n",
-        "        if query.filters is None:\n",
-        "            filter = []\n",
-        "        else:\n",
-        "            filter = query.filters\n",
-        "\n",
-        "        if self.hybrid_search:\n",
-        "            alpha = query.alpha if query.alpha is not None else 0.5\n",
-        "            sparse_vectors = self._sparse_encoder([query.query_str])\n",
-        "            results = self._table.hybrid_search(\n",
-        "                dense_vectors=[query.query_embedding],\n",
-        "                sparse_vectors=sparse_vectors,\n",
-        "                n=query.similarity_top_k,\n",
-        "                filter=filter,\n",
-        "                alpha=alpha,\n",
-        "            )[0]\n",
-        "        else:\n",
-        "            results = self._table.search(\n",
-        "                vectors=[query.query_embedding], n=query.similarity_top_k, filter=filter\n",
-        "            )[0]\n",
-        "\n",
-        "        top_k_nodes = []\n",
-        "        top_k_ids = []\n",
-        "        top_k_scores = []\n",
-        "\n",
-        "        for result in results.to_dict(orient=\"records\"):\n",
-        "            metadata = {x: result[x] for x in result if x not in DEFAULT_COLUMN_NAMES}\n",
-        "            node = TextNode(\n",
-        "                text=result[\"text\"], id_=result[\"document_id\"], metadata=metadata\n",
-        "            )\n",
-        "            top_k_ids.append(result[\"document_id\"])\n",
-        "            top_k_nodes.append(node)\n",
-        "            top_k_scores.append(result[\"__nn_distance\"])\n",
-        "\n",
-        "        return VectorStoreQueryResult(\n",
-        "            nodes=top_k_nodes, similarities=top_k_scores, ids=top_k_ids\n",
-        "        )\n",
-        "\n",
-        "    def delete(self, **delete_kwargs: Any) -> None:\n",
-        "        raise Exception(\"Not implemented.\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "U4HTNkJgnyxq"
       },
       "source": [
@@ -1517,6 +1281,17 @@
       "outputs": [],
       "source": [
         "table.drop()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Take Our Survey\n",
+        "\n",
+        "We hope you found this sample helpful! Your feedback is important to us, and we would appreciate it if you could take a moment to fill out our brief survey. Your input helps us improve our content.\n",
+        "\n",
+        "[**Take the Survey**](https://delighted.com/t/hLVmfCRV)"
       ]
     }
   ],
