--- a/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install kdbai_client langchain langchain_openai"
+    "!pip install kdbai_client langchain langchain_openai langchain-community"
    ]
   },
   {
