update schema types

--- a/LlamaParse_pdf_RAG/llamaParse_demo.ipynb
+++ b/LlamaParse_pdf_RAG/llamaParse_demo.ipynb
@@ -236,6 +236,7 @@
         "        dict(name=\"text\", pytype=\"bytes\"),\n",
         "        dict(\n",
         "            name=\"embedding\",\n",
+        "            pytype=\"float64\",\n",
         "            vectorIndex=dict(type=\"flat\", metric=\"L2\", dims=1536),\n",
         "        ),\n",
         "    ]\n",
