--- a/document_search/document_search.ipynb
+++ b/document_search/document_search.ipynb
@@ -592,6 +592,7 @@
     "        {\"name\": \"sentences\", \"pytype\": \"str\"},\n",
     "        {\n",
     "            \"name\": \"vectors\",\n",
+    "            \"pytype\": \"float64\",\n",
     "            \"vectorIndex\": {\"dims\": 384, \"metric\": \"L2\", \"type\": \"hnsw\"},\n",
     "        },\n",
     "    ]\n",
