--- a/metadata_filtering/metadata_filtering_demo.ipynb
+++ b/metadata_filtering/metadata_filtering_demo.ipynb
@@ -398,7 +398,7 @@
     "        {\"name\": \"Plot\", \"pytype\": \"str\"},\n",
     "        {\n",
     "            \"name\": \"embeddings\",\n",
-    "            \"pytype\": \"float32\",\n",
+    "            \"pytype\": \"float64\",\n",
     "            \"vectorIndex\": {\"dims\": 384, \"metric\": \"L2\", \"type\": \"flat\"},\n",
     "        },\n",
     "    ]\n",
@@ -737,7 +737,7 @@
     }
    ],
    "source": [
-    "print(table.search(query_vector, n=3, filter=[(\"like\", \"Director\", \"George Lucas\"),(\"=\", \"ReleaseYear\", \"1977\")]))"
+    "print(table.search(query_vector, n=3, filter=[(\"like\", \"Director\", \"George Lucas\"),(\"=\", \"ReleaseYear\", 1977)]))"
    ]
   },
   {
