--- a/music_recommendation/music_recommendation.ipynb
+++ b/music_recommendation/music_recommendation.ipynb
@@ -1484,6 +1484,7 @@
     "        },\n",
     "        {\n",
     "            \"name\": \"song_embeddings\",\n",
+    "            \"pytype\": \"float64\",\n",
     "            \"vectorIndex\": {\n",
     "                \"dims\": len(numeric_cols) + embedding_dim,\n",
     "                \"metric\": \"L2\",\n",
