--- a/pattern_matching/pattern_matching.ipynb
+++ b/pattern_matching/pattern_matching.ipynb
@@ -1274,6 +1274,7 @@
     "        },\n",
     "        {\n",
     "            \"name\": \"vectors\",\n",
+    "            \"pytype\": \"float64\",\n",
     "            \"vectorIndex\": {\"dims\": window_size, \"metric\": \"L2\", \"type\": \"hnsw\"},\n",
     "        },\n",
     "    ]\n",
