--- a/hybrid_search/hybrid_search_inflation.ipynb
+++ b/hybrid_search/hybrid_search_inflation.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install kdbai_client sentence-transformers langchain"
+    "!pip install kdbai_client sentence-transformers langchain langchain-community"
    ]
   },
   {
