update imagebind for 1.2

--- a/multimodal_RAG_ImageBind/multi_modal_ImageBind.ipynb
+++ b/multimodal_RAG_ImageBind/multi_modal_ImageBind.ipynb
@@ -1095,17 +1095,17 @@
     "# Helper function to view the results of our similarity search\n",
     "def viewResults(results):\n",
     "    for index, row in results[0].iterrows():\n",
-    "        if row[1] == 'image':\n",
-    "            image = Image.open(row[0])\n",
+    "        if row[2] == 'image':\n",
+    "            image = Image.open(row[1])\n",
     "            display(image)\n",
-    "        elif row[1] == 'text':\n",
-    "            text = read_text_from_file(row[0])\n",
+    "        elif row[2] == 'text':\n",
+    "            text = read_text_from_file(row[1])\n",
     "            print(text)\n",
     "\n",
     "# Multimodal search function, identifies most relevant images and text within the vector database\n",
     "def mm_search(query):\n",
-    "    image_results = table.search(query, n=2, filter=[(\"=\", \"media_type\", \"image\")])\n",
-    "    text_results = table.search(query, n=1, filter=[(\"=\", \"media_type\", \"text\")])\n",
+    "    image_results = table.search(query, n=2, filter=[(\"like\", \"media_type\", \"image\")])\n",
+    "    text_results = table.search(query, n=1, filter=[(\"like\", \"media_type\", \"text\")])\n",
     "    results = [pd.concat([image_results[0], text_results[0]], ignore_index=True)]\n",
     "    viewResults(results)\n",
     "    return(results)"
@@ -1265,7 +1265,7 @@
    "outputs": [],
    "source": [
     "# Use Gemini Pro Vision model to handle multimodal inputs\n",
-    "vision_model = genai.GenerativeModel('gemini-pro-vision')"
+    "vision_model = genai.GenerativeModel('gemini-1.5-flash')"
    ]
   },
   {
@@ -1277,11 +1277,11 @@
     "# Helper function to get retrieved data ready to send to Gemini\n",
     "def RAG_Setup(results,retrieved_data_for_RAG):\n",
     "    for index, row in results[0].iterrows():\n",
-    "        if row[1] == 'image':\n",
-    "            image = Image.open(row[0])\n",
+    "        if row[2] == 'image':\n",
+    "            image = Image.open(row[1])\n",
     "            retrieved_data_for_RAG.append(image)\n",
-    "        elif row[1] == 'text':\n",
-    "            text = read_text_from_file(row[0])\n",
+    "        elif row[2] == 'text':\n",
+    "            text = read_text_from_file(row[1])\n",
     "            retrieved_data_for_RAG.append(text)\n",
     "    return retrieved_data_for_RAG\n"
    ]
