update RAG eval for 1.2

--- a/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install kdbai_client langchain langchain_openai"
+    "!pip install kdbai_client langchain langchain_openai langchain-community"
    ]
   },
   {
