--- a/multimodal_RAG_unified_text/multi_modal_demo.ipynb
+++ b/multimodal_RAG_unified_text/multi_modal_demo.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install kdbai_client langchain openai"
+    "!pip install kdbai_client langchain openai langchain-community"
    ]
   },
   {
