--- a/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install kdbai_client langchain langchain_openai langchain-community"
+    "!pip install kdbai_client langchain langchain_openai langchain-community langchain-huggingface"
    ]
   },
   {
@@ -117,7 +117,8 @@
     "from langchain_community.vectorstores import KDBAI\n",
     "from langchain import HuggingFaceHub\n",
     "from langchain_openai import OpenAI\n",
-    "from langchain.chains.question_answering import load_qa_chain"
+    "from langchain.chains.question_answering import load_qa_chain\n",
+    "from langchain_huggingface import HuggingFaceEndpoint"
    ]
   },
   {
@@ -259,7 +260,7 @@
    "source": [
     "## 2. Define OpenAI Text Embedding Model\n",
     " \n",
-    "We will use OpenAIEmbeddings to embed our document into a format suitable for the vector database. We select `text-embedding-ada-002` for use in the next step."
+    "We will use OpenAIEmbeddings to embed our document into a format suitable for the vector database. We select `text-embedding-3-small` for use in the next step."
    ]
   },
   {
@@ -551,10 +552,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# select two llm models (OpenAI gpt-3.5-turbo-instruct, HuggingFaceHub google/flan-t5-xxl(designed for short answers))\n",
+    "# select two llm models (OpenAI gpt-3.5-turbo-instruct, HuggingFaceHub mistralai/Mistral-7B-Instruct-v0.2)\n",
     "llm_openai = OpenAI(model=\"gpt-3.5-turbo-instruct\", max_tokens=512)\n",
-    "llm_flan = HuggingFaceHub(\n",
-    "    repo_id=\"google/flan-t5-xxl\", model_kwargs={\"temperature\": 0.5, \"max_length\": 512}\n",
+    "llm_mistral = HuggingFaceEndpoint(\n",
+    "    repo_id=\"mistralai/Mistral-7B-Instruct-v0.2\"\n",
     ")"
    ]
   },
@@ -576,7 +577,7 @@
    "source": [
     "# create the chain for each model using langchain load_qa_chain\n",
     "chain_openAI = load_qa_chain(llm_openai, chain_type=\"stuff\")\n",
-    "chain_HuggingFaceHub = load_qa_chain(llm_flan, chain_type=\"stuff\")"
+    "chain_HuggingFaceHub = load_qa_chain(llm_mistral, chain_type=\"stuff\")"
    ]
   },
   {
@@ -635,14 +636,6 @@
    "source": [
     "# HugginFace - run the chain on the query and the related chunks from the documentation\n",
     "chain_HuggingFaceHub.invoke({'input_documents':query_sim, 'question':query})['output_text']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5b9c74a9",
-   "metadata": {},
-   "source": [
-    "We can see the response from OpenAI is longer and more detailed and seems to have done a better job summarizing the nation's strengths from the document provided."
    ]
   },
   {
