--- a/image_search/image_search.ipynb
+++ b/image_search/image_search.ipynb
@@ -1154,7 +1154,7 @@
    "id": "94a00661",
    "metadata": {},
    "source": [
-    "### Crate Vector DB Table\n",
+    "### Create Vector DB Table\n",
     "\n",
     "We then use the KDB.AI `create_table()` function to create a table that matches the defined schema in the vector database."
    ]
