--- a/KDB.AI_course/course_specific_content/rag_example.ipynb
+++ b/KDB.AI_course/course_specific_content/rag_example.ipynb
@@ -143,7 +143,7 @@
       ],
       "source": [
         "# Install required libraries\n",
-        "!pip install llama-index fastembed openai kdbai_client==1.1.0"
+        "!pip install llama-index fastembed openai kdbai_client"
       ]
     },
     {
