add qFlat sample survey

--- a/qFlat_index_pdf_search/pdf_qFlat_Search.ipynb
+++ b/qFlat_index_pdf_search/pdf_qFlat_Search.ipynb
@@ -14,7 +14,7 @@
         "This example demonstrates how to use KDB.AI to run semantic search on unstructured text documents.\n",
         "\n",
         "<div class=\"alert alert-block alert-info\">\n",
-        "<b>Tip:</b> This sample uses ‘qFlat’ , a new vector index choice in KDB.AI. It will support the same API options as the existing ‘Flat’ index but with the significant difference that the index is stored on-disk and memory-mapped as required. This means data inserts will have negligible memory and cpu footprints. The vector index can grow and be searched as long as there is disk space available - it is not memory bound like the traditional flat index. Among other cases, this stands out as a great index for memory contrained situations such as edge devices.\n",
+        "<b>Tip:</b> This sample uses ‘qFlat’ , a new vector index choice in KDB.AI. It will support the same API options as the existing ‘Flat’ index but with the significant difference that the index is stored on-disk and memory-mapped as required. This means data inserts will have negligible memory and cpu footprints. The vector index can grow and be searched as long as there is disk space available and works great for datasets with up to 1,000,000 vectors. Among other cases, this stands out as a great index for memory contrained situations such as edge devices.\n",
         "</div>\n",
         "\n",
         "Semantic search allows users to perform searches based on the meaning or similarity of the data rather than exact matches. It works by converting the query into a vector representation and then finding similar vectors in the database. This way, even if the query and the data in the database are not identical, the system can identify and retrieve the most relevant results based on their semantic meaning.\n",
@@ -77,7 +77,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install kdbai_client pypdf sentence_transformers"
+        "%pip install kdbai_client pypdf sentence_transformers"
       ]
     },
     {
@@ -2262,7 +2262,7 @@
         "\n",
         "We hope you found this sample helpful! Your feedback is important to us, and we would appreciate it if you could take a moment to fill out our brief survey. Your input helps us improve our content.\n",
         "\n",
-        "[**Take the Survey**](https://delighted.com/t/ezUwZ88a)"
+        "[**Take the Survey**](https://delighted.com/t/ejgOzTpo)"
       ]
     }
   ],
