update OpenAI LLM models

--- a/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
@@ -489,7 +489,7 @@
    "source": [
     "qabot = RetrievalQA.from_chain_type(\n",
     "    chain_type=\"stuff\",\n",
-    "    llm=ChatOpenAI(model=\"gpt-3.5-turbo-16k\", temperature=0.0),\n",
+    "    llm=ChatOpenAI(model=\"gpt-4o-mini\", temperature=0.0),\n",
     "    retriever=vecdb_kdbai.as_retriever(search_kwargs=dict(k=K)),\n",
     "    return_source_documents=True,\n",
     ")"
@@ -633,7 +633,7 @@
     "\n",
     "We will evaluate the conciseness of the answers the QA bot returns using LangChain's `load_evaluator` function with the `criteria` set to `\"conciseness\"`.\n",
     "\n",
-    "In this example, we use GPT-4 as the LLM that performs the evaluation."
+    "In this example, we use GPT-4o as the LLM that performs the evaluation."
    ]
   },
   {
@@ -643,7 +643,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluation_llm = ChatOpenAI(model=\"gpt-4\")"
+    "evaluation_llm = ChatOpenAI(model=\"gpt-4o\")"
    ]
   },
   {
