--- a/LlamaParse_pdf_RAG/llamaParse_demo.ipynb
+++ b/LlamaParse_pdf_RAG/llamaParse_demo.ipynb
@@ -301,7 +301,7 @@
       "outputs": [],
       "source": [
         "EMBEDDING_MODEL  = \"text-embedding-3-small\"\n",
-        "GENERATION_MODEL = \"gpt-3.5-turbo-0125\"\n",
+        "GENERATION_MODEL = \"gpt-4o\"\n",
         "\n",
         "llm = OpenAI(model=GENERATION_MODEL)\n",
         "embed_model = OpenAIEmbedding(model=EMBEDDING_MODEL)\n",
