--- a/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
@@ -552,8 +552,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# select two llm models (OpenAI gpt-3.5-turbo-instruct, HuggingFaceHub mistralai/Mistral-7B-Instruct-v0.2)\n",
-    "llm_openai = OpenAI(model=\"gpt-3.5-turbo-instruct\", max_tokens=512)\n",
+    "# select two llm models (OpenAI gpt-4o, HuggingFaceHub mistralai/Mistral-7B-Instruct-v0.2)\n",
+    "llm_openai = ChatOpenAI(model=\"gpt-4o\", max_tokens=512)\n",
     "llm_mistral = HuggingFaceEndpoint(\n",
     "    repo_id=\"mistralai/Mistral-7B-Instruct-v0.2\"\n",
     ")"
@@ -643,11 +643,11 @@
    "id": "a3b79d56",
    "metadata": {},
    "source": [
-    "### RetrievalQA with GPT-3.5\n",
+    "### RetrievalQA with GPT-4o\n",
     "\n",
-    "Let's try the second method using `RetrievalQA`. This time lets use GPT-3.5 as our LLM of choice.\n",
+    "Let's try the second method using `RetrievalQA`. This time lets use GPT-4o as our LLM of choice.\n",
     "\n",
-    "The code below defines a question-answering bot that combines OpenAI's GPT-3.5 Turbo for generating responses and a retriever that accesses the KDB.AI vector database to find relevant information."
+    "The code below defines a question-answering bot that combines OpenAI's GPT-4o for generating responses and a retriever that accesses the KDB.AI vector database to find relevant information."
    ]
   },
   {
@@ -669,7 +669,7 @@
    "source": [
     "qabot = RetrievalQA.from_chain_type(\n",
     "    chain_type=\"stuff\",\n",
-    "    llm=ChatOpenAI(model=\"gpt-3.5-turbo-16k\", temperature=0.0),\n",
+    "    llm=ChatOpenAI(model=\"gpt-4o\", temperature=0.0),\n",
     "    retriever=vecdb_kdbai.as_retriever(search_kwargs=dict(k=K)),\n",
     "    return_source_documents=True,\n",
     ")"
