update LLMs used in samples

--- a/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
@@ -467,7 +467,7 @@
     "\n",
     "### Define QA Bot\n",
     "\n",
-    "The code below defines a question-answering bot that combines OpenAI's GPT-3.5 Turbo for generating responses and a retriever that accesses the KDB.AI vector database to find relevant information."
+    "The code below defines a question-answering bot that combines OpenAI's GPT-4o-mini for generating responses and a retriever that accesses the KDB.AI vector database to find relevant information."
    ]
   },
   {
